--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script type="text/javascript" src="js/libs/jQuery.js"></script>
+        <script type="text/javascript" src="js/Assets.js"></script>
         <script type="text/javascript" src="js/App.js"></script>
     </head>
     <body>
