Initial commit of some rendering code

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
     <head>
         <script type="text/javascript" src="js/libs/jQuery.js"></script>
         <script type="text/javascript" src="js/Assets.js"></script>
+        <script type="text/javascript" src="js/Renderer.js"></script>
         <script type="text/javascript" src="js/App.js"></script>
     </head>
     <body>
