Initial camera commit

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src="js/Assets.js"></script>
         <script type="text/javascript" src="js/Renderer.js"></script>
         <script type="text/javascript" src="js/App.js"></script>
+        <script type="text/javascript" src="js/Camera.js"></script>
     </head>
     <body>
         <div id="content">
