--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <script type="text/javascript" src="js/Renderer.js"></script>
         <script type="text/javascript" src="js/App.js"></script>
         <script type="text/javascript" src="js/Camera.js"></script>
+        <script type="text/javascript" src="js/World.js"></script>
     </head>
     <body>
         <div id="content">
