Begin processing user input from mouse and keyboard

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="js/Assets.js"></script>
         <script type="text/javascript" src="js/Renderer.js"></script>
         <script type="text/javascript" src="js/Camera.js"></script>
+        <script type="text/javascript" src="js/Input.js"></script>
         <script type="text/javascript" src="js/World.js"></script>
         <script type="text/javascript" src="js/Game.js"></script>
         <script type="text/javascript" src="js/App.js"></script>
