--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="js/libs/jQuery.js"></script>
         <script type="text/javascript" src="js/Keyboard.js"></script>
         <script type="text/javascript" src="js/Assets.js"></script>
+        <script type="text/javascript" src="js/Sprite.js"></script>
         <script type="text/javascript" src="js/Renderer.js"></script>
         <script type="text/javascript" src="js/Camera.js"></script>
         <script type="text/javascript" src="js/Input.js"></script>
