--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
             }
         </style>
         <script type="text/javascript" src="js/libs/jQuery.js"></script>
+        <script type="text/javascript" src="js/Network.js"></script>
         <script type="text/javascript" src="js/Keyboard.js"></script>
         <script type="text/javascript" src="js/Assets.js"></script>
         <script type="text/javascript" src="js/Sprite.js"></script>
