--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
             <div id="canvas_land">
             </div>
         </div>
+        <div id="userinfo" style="display: none;">
+            <div id="playerId">10</div>
+        </div>
     </body>
 </html>
