Center canvas div

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
     <head>
         <style>
+            body {
+                background-color: purple;
+            }
             canvas {
-                margin: 0 auto;
+                position: absolute;
+                top:0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+
+                margin: auto;
             }
         </style>
         <script type="text/javascript" src="assets/js/libs/jQuery.js"></script>
