Provide a super ugly user interface to request a game

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <div id="canvas_land">
             </div>
         </div>
+        <div id="gameinfo">
+            <label>Your Id</label>
+            <input type="text" id="enteredPlayerId" />
+            <label>How many players would you like in your game?</label>
+            <input type="text" id="numPlayers" />
+            <input type="button" id="submitGameRequest" value="Submit" />
+        </div>
         <div id="userinfo" style="display: none;">
             <div id="playerId">10</div>
         </div>
