Just for quinten button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <label>How many players would you like in your game?</label>
             <input type="text" id="numPlayers" />
             <input type="button" id="submitGameRequest" value="Submit" />
+            <input type="button" id="quintenbutton" value="Lazy Quinten" />
         </div>
         <div id="userinfo" style="display: none;">
             <div id="playerId">10</div>
