Allow the server and websocket port to be configured at startup

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
         <div id="userinfo" style="display: none;">
             <div id="playerId">10</div>
+            <div id="wsport">{{.Port}}</div>
         </div>
     </body>
 </html>
