Route a unit path using the interface

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </style>
         <script type="text/javascript" src="assets/js/libs/jQuery.js"></script>
         <script type="text/javascript" src="assets/js/libs/heap.js"></script>
+        <script type="text/javascript" src="assets/js/ArrayUtils.js"></script>
         <script type="text/javascript" src="assets/js/Pathfinding.js"></script>
         <script type="text/javascript" src="assets/js/Network.js"></script>
         <script type="text/javascript" src="assets/js/Keyboard.js"></script>
