Green over purple, says Quinten

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <style>
             body {
-                background-color: purple;
+                background-color: green;
             }
             canvas {
                 position: absolute;
