--- a/tests.html
+++ b/tests.html
@@ -32,6 +32,7 @@
         <script type="text/javascript" src="assets/js/App.js"></script>
         <!-- Tests go here -->
         <script type="text/javascript" src="assets/js/tests/ArrayUtils_test.js"></script>
+        <script type="text/javascript" src="assets/js/tests/Keyboard_test.js"></script>
     </head>
     <body>
         <h1 id="qunit-header">QUnit Test Suite</h1>
