Simple Mouse tests

--- a/tests.html
+++ b/tests.html
@@ -33,6 +33,7 @@
         <!-- Tests go here -->
         <script type="text/javascript" src="assets/js/tests/ArrayUtils_test.js"></script>
         <script type="text/javascript" src="assets/js/tests/Keyboard_test.js"></script>
+        <script type="text/javascript" src="assets/js/tests/Mouse_test.js"></script>
     </head>
     <body>
         <h1 id="qunit-header">QUnit Test Suite</h1>
