--- a/tests.html
+++ b/tests.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="assets/js/tests/ArrayUtils_test.js"></script>
         <script type="text/javascript" src="assets/js/tests/Keyboard_test.js"></script>
         <script type="text/javascript" src="assets/js/tests/Mouse_test.js"></script>
+        <script type="text/javascript" src="assets/js/tests/Camera_test.js"></script>
     </head>
     <body>
         <h1 id="qunit-header">QUnit Test Suite</h1>
