Separate game functions to allow sharing with editor

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="assets/js/World.js"></script>
         <script type="text/javascript" src="assets/js/Game.js"></script>
         <script type="text/javascript" src="assets/js/App.js"></script>
+        <script type="text/javascript" src="assets/js/GameApp.js"></script>
     </head>
     <body>
         <div id="content">
