Partition out game related Input functions to a separate file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script type="text/javascript" src="assets/js/Renderer.js"></script>
         <script type="text/javascript" src="assets/js/Camera.js"></script>
         <script type="text/javascript" src="assets/js/Input.js"></script>
+        <script type="text/javascript" src="assets/js/GameInput.js"></script>
         <script type="text/javascript" src="assets/js/World.js"></script>
         <script type="text/javascript" src="assets/js/Game.js"></script>
         <script type="text/javascript" src="assets/js/App.js"></script>
