Partition out game only renderer functions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="assets/js/Sprite.js"></script>
         <script type="text/javascript" src="assets/js/Assets.js"></script>
         <script type="text/javascript" src="assets/js/Renderer.js"></script>
+        <script type="text/javascript" src="assets/js/GameRenderer.js"></script>
         <script type="text/javascript" src="assets/js/Camera.js"></script>
         <script type="text/javascript" src="assets/js/Input.js"></script>
         <script type="text/javascript" src="assets/js/GameInput.js"></script>
