--- a/editor.html
+++ b/editor.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src="assets/js/Renderer.js"></script>
         <script type="text/javascript" src="assets/js/Camera.js"></script>
         <script type="text/javascript" src="assets/js/Input.js"></script>
+        <script type="text/javascript" src="assets/js/EditorInput.js"></script>
         <script type="text/javascript" src="assets/js/World.js"></script>
         <script type="text/javascript" src="assets/js/Editor.js"></script>
         <script type="text/javascript" src="assets/js/App.js"></script>
