Hook up render callbacks for selector sprite

--- a/editor.html
+++ b/editor.html
@@ -25,10 +25,11 @@
         <script type="text/javascript" src="assets/js/Sprite.js"></script>
         <script type="text/javascript" src="assets/js/Assets.js"></script>
         <script type="text/javascript" src="assets/js/Renderer.js"></script>
+        <script type="text/javascript" src="assets/js/EditorRenderer.js"></script>
         <script type="text/javascript" src="assets/js/Camera.js"></script>
+        <script type="text/javascript" src="assets/js/World.js"></script>
         <script type="text/javascript" src="assets/js/Input.js"></script>
         <script type="text/javascript" src="assets/js/EditorInput.js"></script>
-        <script type="text/javascript" src="assets/js/World.js"></script>
         <script type="text/javascript" src="assets/js/Editor.js"></script>
         <script type="text/javascript" src="assets/js/App.js"></script>
         <script type="text/javascript" src="assets/js/EditorApp.js"></script>
